# Projeto_Integrador

./: Cronograma.xlsx  README.md  Slide.pptx
Testes Isaac/byakugan/: CMakeLists.txt
Testes Isaac/byakugan/scripts/: listenner.py  talker.py  videoCapture.py
Testes Paulinho/: Camera_ws  teste_video
Testes Paulinho/ServoSeguidorROS/: ServoSeguidorROS.ino
Testes Paulinho/TesteSerialROS/: TesteSerialROS.ino
Testes Paulinho/teste_video/: CMakeLists.txt  package.xml
Testes Paulinho/teste_video/msg/: Circulo.msg  Circulos.msg
Testes Paulinho/teste_video/scripts/: draw.py  identificador.py  listenerCirculos.py  listenerRetangulos.py  showFaces.py  talker.py  talkerCoordenadasCirculos.py  talkerCoordenadasFaces.py  talkerImg.py
Testes/Testes Paulinho/teste_video/: CMakeLists.txt  (+1 more)
Testes/Testes Paulinho/testevideo/: CMakeLists.txt  package.xml
Testes/Testes Paulinho/testevideo/scripts/: anguloSerial.py  distanciaGUI.py  estrategia.py  listenerHardware.py  testeSerialNode.py
Testes/isaac_testes/: CMakeLists.txt  package.xml
Testes/testeimsl/: package.xml
Vídeos/: 2019-04-18 20-03-35.mp4.sfk
Vídeos/Originals/: 2019-04-18 16-15-16.mp4.sfk  2019-04-18 21-54-46.mp4.sfk  2019-04-18 22-04-45.mp4.sfk
exemplosRos/tutoriais1/: CMakeLists.txt  package.xml
exemplosRos/tutoriais2/: CMakeLists.txt  package.xml
exemplosRos/tutoriais3/: CMakeLists.txt  package.xml
haarcascades/mod/: palm.xml
imgs/Apresentação/: photothumb.db
pacote-byakugan/: rosgraphByakugan.dot
pacote-byakugan/byakugan/: CMakeLists.txt  package.xml
ros-tools/: rename_package.py
(+45 files in other folders)
