<package format="2">
  <name>testevideo</name>
  <version>0.0.0</version>
  <description>The teste_video package</description>




  <maintainer email="paulo@todo.todo">paulo</maintainer>



  

  <license>TODO</license>























  <build_depend>message_generation</build_depend>





  <exec_depend>message_runtime</exec_depend>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>Opencv2</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>Opencv2</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>



  <export>


  </export>
</package>
